--- a/Code/ShipWorks.UI/app.config
+++ b/Code/ShipWorks.UI/app.config
@@ -98,6 +98,10 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.3460.0.36" newVersion="16.3460.0.36" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
