--- a/Code/ShipWorks/App.config
+++ b/Code/ShipWorks/App.config
@@ -181,6 +181,14 @@
 
       </dependentAssembly>
 
+      <dependentAssembly>
+
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-16.3460.0.36" newVersion="16.3460.0.36" />
+
+      </dependentAssembly>
+
     </assemblyBinding>
 
   </runtime>
